# chamfer-ai

./: .gitignore  DEMO_SCRIPT.md  IMPLEMENTATION_SUMMARY.md  README.md  updates.md
.github/workflows/: ci.yml
backend/: docker-compose.yml
backend/ai-server/: .env.example  package-lock.json  package.json
backend/ai-server/src/: config.ts
backend/ai-server/src/0g/: tee-verifier.ts
backend/ai-server/src/prompts/: cadquery-guide.txt  clarifier-prompt.txt  docker-execution-checks.txt  few-shot-examples.txt  loader.ts  parameter-patching.txt  prompt-expander.txt  retry-user-message.txt  system-prompt.txt
backend/ai-server/src/routes/: generate.ts  models.routes.ts
backend/ai-server/src/scripts/: test-groq.ts
backend/ai-server/src/services/: context-manager.ts  db.ts  llm.ts  prompt-expander.ts  prompt.ts  zgStorage.ts
backend/ai-server/tests/: llm.test.ts
backend/cad-server/: Dockerfile  build.sh  pyproject.toml  requirements.txt
backend/cad-server/server/src/: executor.py
backend/cad-server/src/: executor.py  params.py  runner.py
docs/: 0g_storage.txt  supabase_migration_v6.sql
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/brand/: Logo.tsx
frontend/src/components/cad/: CodeSection.tsx  ExportSection.tsx  GLBModel.tsx  ParameterPanel.tsx  STLModel.tsx  ViewportHUD.tsx
frontend/src/design/: tokens.ts
frontend/src/hooks/: useAutoScroll.ts  useParamUpdate.ts
frontend/src/lib/: constants.ts  imageUtils.ts
frontend/src/pages/: HomePage.tsx
frontend/src/types/: index.ts
(+16 files in other folders)
