[project]
name = "vibecad-cad-server"
version = "0.3.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "cadquery>=2.7",
    "pydantic>=2.11",
    "docker>=7.0",
]

[project.optional-dependencies]
vision = [
    "matplotlib>=3.8",
    "numpy>=1.26",
]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "matplotlib>=3.8",
    "numpy>=1.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
